--- a/index.html
+++ b/index.html
@@ -12,63 +12,97 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
 
-<!-- Inizio header -->
-<header>
-  <!-- Inizio header top -->
-  <div class="header-top">
-    <div class="container debug_h100">
-      <div class="row">
-        <!-- navbar left -->
-        <div class="col-xs-6">
-          navbar left
-        </div>
-        <!-- navbar right -->
-        <div class="col-xs-6">
-          navbar right
-        </div>
+<!--  nel body ho messo provvisoriamente la classe text-align per allineare i testi usati come segnaposto -->
+<body class="text-center">
 
+  <!-- Inizio header -->
+  <header>
+    <!-- Inizio header top -->
+    <div class="header-top">
+      <div class="container debug_h100">
+        <div class="row">
+          <!-- navbar left -->
+          <div class="col-xs-6">
+            navbar left
+          </div>
+          <!-- /navbar left -->
+          <!-- navbar right -->
+          <div class="col-xs-6">
+            navbar right
+          </div>
+          <!-- /navbar right -->
+
+        </div>
       </div>
     </div>
-  </div>
-  <!-- /header top -->
+    <!-- /header top -->
 
-  <div class="jumbotron">
-    <div class="container debug_h200">
-      <div class="row">
-        <!-- jumbotron left -->
-        <div class="col-xs-12 col-sm-8">
-          jumbotron left
-        </div>
-        <!-- jumbotron right -->
-        <div class="col-xs-12 col-sm-4">
-          jumbotron right
-        </div>
+    <div class="jumbotron">
+      <div class="container debug_h200">
+        <div class="row">
+          <!-- jumbotron left -->
+          <div class="col-xs-12 col-sm-8">
+            jumbotron left
+          </div>
+          <!-- jumbotron right -->
+          <div class="col-xs-12 col-sm-4">
+            jumbotron right
+          </div>
 
+        </div>
       </div>
     </div>
-  </div>
 
 
-</header>
-<!-- /header -->
-
+  </header>
+  <!-- /header -->
 
 
 
-<!-- Inizio main -->
-<main>
+  <!-- Inizio main -->
+  <main>
+    <!-- Inizio stripe 1 -->
+    <section id="stripe1">
+      <div class="container debug_h100">
+        <!-- row 1 -->
+        <div class="row">
+          <div class="col-xs-12">
+            INNOVATIVE BUSINESS...
+          </div>
+        </div>
+        <!-- /row 1 -->
+        <!-- row 2 -->
+        <div class="row">
+          <div class="col-xs-6 col-sm-2">logo1</div>
+          <div class="col-xs-6 col-sm-2">logo2</div>
+          <div class="col-xs-6 col-sm-2">logo3</div>
+          <div class="col-xs-6 col-sm-2">logo4</div>
+          <div class="col-xs-6 col-sm-2">logo5</div>
+          <div class="col-xs-6 col-sm-2">logo6</div>
+        </div>
+        <!-- /row 2 -->
+        <!-- row 3 -->
+        <div class="row">
+          <div class="col-xs-12">
+            View Customer Stories
+          </div>
+        </div>
+        <!-- /row 3 -->
 
-</main>
-<!-- /main -->
+      </div>
+    </section>
+    <!-- /stripe 1 -->
+
+  </main>
+  <!-- /main -->
 
 
-<!-- Inizio footer -->
-<footer>
+  <!-- Inizio footer -->
+  <footer>
 
-</footer>
-<!-- /footer -->
+  </footer>
+  <!-- /footer -->
 
 
 </body>
