--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- row 1 -->
         <div class="row">
           <div class="col-xs-12">
-            INNOVATIVE BUSINESS...
+            Innovative business...
           </div>
         </div>
         <!-- /row 1 -->
@@ -93,6 +93,45 @@
       </div>
     </section>
     <!-- /stripe 1 -->
+
+    <!-- Inizio stripe2 -->
+    <section id="stripe2">
+      <div class="container debug_h100">
+        <!-- row 1 -->
+        <div class="row">
+          <div class="col-xs-12">
+            Deploy and scale...
+          </div>
+        </div>
+        <!-- /row 1 -->
+        <!-- row 2 -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            Elenco
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            1
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            2
+          </div>
+        </div>
+        <!-- /row 2 -->
+        <!-- row 3 -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+            3
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            4
+          </div>
+        </div>
+        <!-- row 3 -->
+
+      </div>
+    </section>
+    <!-- /stripe 2 -->
+    
 
   </main>
   <!-- /main -->
