Definizione struttura fascia 3

--- a/index.html
+++ b/index.html
@@ -131,7 +131,25 @@
       </div>
     </section>
     <!-- /stripe 2 -->
-    
+
+    <!-- Inizio stripe3 -->
+    <section id="stripe3">
+      <div class="container debug_h100">
+        <div class="row">
+
+          <div class="col-xs-12">
+            Designed for developers
+          </div>
+
+          <div class="col-xs-8 col-xs-offset-2">
+            Slider
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- /stripe3 -->
+
 
   </main>
   <!-- /main -->
