--- a/index.html
+++ b/index.html
@@ -150,6 +150,35 @@
     </section>
     <!-- /stripe3 -->
 
+    <!-- Inizio stripe4 -->
+    <section id="stripe4">
+      <div class="container debug_h100">
+
+        <!-- row 1 -->
+        <div class="row">
+          <div class="col-xs-12">
+            The features your business needs
+          </div>
+        </div>
+        <!-- /row 1 -->
+        <!-- row 2 -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            1
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            2
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            3
+          </div>
+        </div>
+        <!-- /row 2 -->
+
+      </div>
+    </section>
+    <!-- /stripe4 -->
+
 
   </main>
   <!-- /main -->
