--- a/index.html
+++ b/index.html
@@ -179,6 +179,108 @@
     </section>
     <!-- /stripe4 -->
 
+    <!-- Inizio stripe5 -->
+    <section id="stripe5">
+      <div class="container">
+
+        <!-- row 1 -->
+        <div class="row debug_h80">
+          <div class="col-xs-12">
+            Service your customers around the world...
+          </div>
+        </div>
+        <!-- /row 1 -->
+        <!-- row 2 -->
+        <div class="row">
+          <!-- row 2 left -->
+          <div class="col-xs-12 col-lg-6 debug_h50">
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+          </div>
+          <!-- /row 2 left -->
+          <!-- row 2 right -->
+          <div class="col-xs-12 col-lg-6 debug_h50">
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-8"></div>
+              <div class="col-xs-2"></div>
+            </div>
+
+          </div>
+          <!-- /row 2 right -->
+
+        </div>
+        <!-- /row 2 -->
+      </div>
+    </section>
+    <!-- /stripe5 -->
+
 
   </main>
   <!-- /main -->
