Definizione struttura pagina

--- a/index.html
+++ b/index.html
@@ -281,6 +281,37 @@
     </section>
     <!-- /stripe5 -->
 
+    <!-- Inizio stripe 6 -->
+    <section id="stripe6">
+      <div class="container debug_h100">
+        <div class="row">
+
+          <div class="col-xs-12">
+            Development teams love DigitalOcean
+          </div>
+
+          <div class="col-xs-8 col-xs-offset-2">
+            Slider
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- /stripe 6 -->
+
+    <!-- Inizio stripe 7 -->
+    <section id="stripe7">
+      <div class="container debug_h100">
+        <div class="row">
+
+          <div class="col-xs-12">
+            Get started now
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- /stripe 7 -->
 
   </main>
   <!-- /main -->
@@ -288,7 +319,17 @@
 
   <!-- Inizio footer -->
   <footer>
+    <div class="container debug_h100">
+      <div class="row">
 
+        <div class="col-xs-12 col-sm-12 col-md-4">1</div>
+        <div class="col-xs-12 col-sm-6 col-md-2">2</div>
+        <div class="col-xs-12 col-sm-6 col-md-2">3</div>
+        <div class="col-xs-12 col-sm-6 col-md-2">4</div>
+        <div class="col-xs-12 col-sm-6 col-md-2">5</div>
+
+      </div>
+    </div>
   </footer>
   <!-- /footer -->
 
