--- a/index.html
+++ b/index.html
@@ -121,28 +121,40 @@
   <main>
     <!-- Inizio stripe 1 -->
     <section id="stripe1">
-      <div class="container debug_h100">
+      <div class="container">
         <!-- row 1 -->
         <div class="row">
           <div class="col-xs-12">
-            Innovative business...
+            <h4 class="text-center">Innovative Business Trust Digitalocean</h4>
           </div>
         </div>
         <!-- /row 1 -->
         <!-- row 2 -->
-        <div class="row">
-          <div class="col-xs-6 col-sm-2">logo1</div>
-          <div class="col-xs-6 col-sm-2">logo2</div>
-          <div class="col-xs-6 col-sm-2">logo3</div>
-          <div class="col-xs-6 col-sm-2">logo4</div>
-          <div class="col-xs-6 col-sm-2">logo5</div>
-          <div class="col-xs-6 col-sm-2">logo6</div>
+        <div class="row text-center">
+          <div class="col-xs-6 col-sm-2">
+            <img src="img/logo_docker.png" alt="Logo Docker">
+          </div>
+          <div class="col-xs-6 col-sm-2">
+            <img src="img/logo_gitlab.png" alt="Logo GitLab">
+          </div>
+          <div class="col-xs-6 col-sm-2">
+            <img src="img/logo_slack.png" alt="Logo Slack">
+          </div>
+          <div class="col-xs-6 col-sm-2">
+            <img src="img/logo_hashicorp.png" alt="Logo HashiCorp">
+          </div>
+          <div class="col-xs-6 col-sm-2">
+            <img src="img/logo_hashicorp.png" alt="Logo HashiCorp">
+          </div>
+          <div class="col-xs-6 col-sm-2">
+            <img src="img/logo_splunk.png" alt="Logo Splunk">
+          </div>
         </div>
         <!-- /row 2 -->
         <!-- row 3 -->
         <div class="row">
-          <div class="col-xs-12">
-            View Customer Stories
+          <div class="col-xs-12 text-center">
+            <a href="#">View Customer Stories <i class="fas fa-chevron-right"></i></a>
           </div>
         </div>
         <!-- /row 3 -->
