--- a/index.html
+++ b/index.html
@@ -165,34 +165,49 @@
 
     <!-- Inizio stripe2 -->
     <section id="stripe2">
-      <div class="container debug_h100">
+      <div class="container">
         <!-- row 1 -->
         <div class="row">
-          <div class="col-xs-12">
-            Deploy and scale...
+          <div class="col-xs-12 text-center">
+            <h2>Deploy and scale seamlessly</h2>
+            <p>Our optimized configuration process saves your team time when running and scaling distributed applications, Al & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
           </div>
         </div>
         <!-- /row 1 -->
         <!-- row 2 -->
         <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            Elenco
+          <div class="col-xs-12 col-sm-3 col-sm-offset-1">
+            <ul class="list-unstyled">
+              <li>Deploy</li>
+              <li>Manage</li>
+              <li>Secure</li>
+              <li>Scale</li>
+              <li>Monitor</li>
+            </ul>
           </div>
           <div class="col-xs-12 col-sm-4">
-            1
+            <img src="img/1.svg" alt="Cluster">
+            <h4>Cluster deployments</h4>
+            <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            2
+            <img src="img/2.svg" alt="Drop">
+            <h4>Optimized compute types</h4>
+            <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
           </div>
         </div>
         <!-- /row 2 -->
         <!-- row 3 -->
         <div class="row">
           <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-            3
+            <img src="img/3.svg" alt="Rocket">
+            <h4>One-click apps</h4>
+            <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            4
+            <img src="img/4.svg" alt="Folder">
+            <h4>Global availability</h4>
+            <p>Deploy to any of our data center regions around the world.</p>
           </div>
         </div>
         <!-- row 3 -->
