--- a/index.html
+++ b/index.html
@@ -218,15 +218,25 @@
 
     <!-- Inizio stripe3 -->
     <section id="stripe3">
-      <div class="container debug_h100">
+      <div class="container">
         <div class="row">
 
-          <div class="col-xs-12">
-            Designed for developers
+          <div class="col-xs-12 text-center">
+            <h2>Designed for developers</h2>
+            <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
           </div>
 
-          <div class="col-xs-8 col-xs-offset-2">
-            Slider
+          <div class="col-xs-8 col-xs-offset-2 text-center">
+            <figure>
+              <img src="img/slider.jpg" alt="Slider">
+            </figure>
+            <p>Create computer servers in 55 seconds or less.</p>
+            <div class="ms_slider_circle">
+              <a href="#"><i class="fas fa-circle"></i></a>
+              <a href="#"><i class="far fa-circle"></i></a>
+              <a href="#"><i class="far fa-circle"></i></a>
+              <a href="#"><i class="far fa-circle"></i></a>
+            </div>
           </div>
 
         </div>
