--- a/index.html
+++ b/index.html
@@ -246,25 +246,34 @@
 
     <!-- Inizio stripe4 -->
     <section id="stripe4">
-      <div class="container debug_h100">
+      <div class="container">
 
         <!-- row 1 -->
         <div class="row">
           <div class="col-xs-12">
-            The features your business needs
+            <h2 class="text-center">The features your business needs</h2>
           </div>
         </div>
         <!-- /row 1 -->
         <!-- row 2 -->
         <div class="row">
           <div class="col-xs-12 col-sm-4">
-            1
+            <img src="img/predictable-pricing.svg" alt="Predictable Pricing">
+            <h4>Predictable pricing</h4>
+            <p>Leave complex pricing structures behind. Always know what you'll pay per month with a flat, industry-leading pricing structure.</p>
+            <a href="#">Pricing</a>
           </div>
           <div class="col-xs-12 col-sm-4">
-            2
+            <img src="img/world-class-services.svg" alt="World-class service">
+            <h4>World-class service</h4>
+            <p>Free round-the-clock technical support for all customers. You'll feel the love.</p>
+            <a href="#">Support</a>
           </div>
           <div class="col-xs-12 col-sm-4">
-            3
+            <img src="img/reliable-platform.svg" alt="Reliable platform">
+            <h4>Reliable platform</h4>
+            <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+            <a href="#">Security</a>
           </div>
         </div>
         <!-- /row 2 -->
