--- a/index.html
+++ b/index.html
@@ -287,92 +287,92 @@
       <div class="container">
 
         <!-- row 1 -->
-        <div class="row debug_h80">
+        <div class="row">
           <div class="col-xs-12">
-            Service your customers around the world...
+            <h2 class="text-center">Service your customers around the world from 12 regions.</h2>
           </div>
         </div>
         <!-- /row 1 -->
         <!-- row 2 -->
         <div class="row">
           <!-- row 2 left -->
-          <div class="col-xs-12 col-lg-6 debug_h50">
+          <div class="col-xs-12 col-lg-6">
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">AMS2</div>
+              <div class="col-xs-7">Amsterdam, Netherlands</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">AMS3</div>
+              <div class="col-xs-7">Amsterdam, Netherlands</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">BLR1</div>
+              <div class="col-xs-7">Bangalore, India</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">FRA1</div>
+              <div class="col-xs-7">Frankfurt, German</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">LONI</div>
+              <div class="col-xs-7">London, UK</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">NYC1</div>
+              <div class="col-xs-7">New York, USA</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
           </div>
           <!-- /row 2 left -->
           <!-- row 2 right -->
-          <div class="col-xs-12 col-lg-6 debug_h50">
+          <div class="col-xs-12 col-lg-6">
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">AMS2</div>
+              <div class="col-xs-7">Amsterdam, Netherlands</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">AMS3</div>
+              <div class="col-xs-7">Amsterdam, Netherlands</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">BLR1</div>
+              <div class="col-xs-7">Bangalore, India</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">FRA1</div>
+              <div class="col-xs-7">Frankfurt, German</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">LON1</div>
+              <div class="col-xs-7">London, UK</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
             <div class="row">
-              <div class="col-xs-2"></div>
-              <div class="col-xs-8"></div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">NYC1</div>
+              <div class="col-xs-7">New York, USA</div>
+              <div class="col-xs-3"><a href="#">Test speed</a></div>
             </div>
 
           </div>
