--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <!-- Inizio main -->
   <main>
-    <!-- Inizio stripe 1 -->
+    <!-- Inizio fascia 1 -->
     <section id="stripe1">
       <div class="container">
         <!-- row 1 -->
@@ -161,9 +161,9 @@
 
       </div>
     </section>
-    <!-- /stripe 1 -->
+    <!-- /fascia 1 -->
 
-    <!-- Inizio stripe2 -->
+    <!-- Inizio fascia 2 -->
     <section id="stripe2">
       <div class="container">
         <!-- row 1 -->
@@ -214,9 +214,9 @@
 
       </div>
     </section>
-    <!-- /stripe 2 -->
+    <!-- /fascia 2 -->
 
-    <!-- Inizio stripe3 -->
+    <!-- Inizio fascia 3 -->
     <section id="stripe3">
       <div class="container">
         <div class="row">
@@ -242,9 +242,9 @@
         </div>
       </div>
     </section>
-    <!-- /stripe3 -->
+    <!-- /fascia 3 -->
 
-    <!-- Inizio stripe4 -->
+    <!-- Inizio fascia 4 -->
     <section id="stripe4">
       <div class="container">
 
@@ -280,9 +280,9 @@
 
       </div>
     </section>
-    <!-- /stripe4 -->
+    <!-- /fascia 4 -->
 
-    <!-- Inizio stripe5 -->
+    <!-- Inizio fascia 5 -->
     <section id="stripe5">
       <div class="container">
 
@@ -382,27 +382,43 @@
         <!-- /row 2 -->
       </div>
     </section>
-    <!-- /stripe5 -->
+    <!-- /fascia 5 -->
 
-    <!-- Inizio stripe 6 -->
+    <!-- Inizio fascia 6 -->
     <section id="stripe6">
-      <div class="container debug_h100">
+      <div class="container">
         <div class="row">
 
-          <div class="col-xs-12">
-            Development teams love DigitalOcean
+          <div class="col-xs-12 text-center">
+            <h2>Development teams love DigitalOcean</h2>
           </div>
 
-          <div class="col-xs-8 col-xs-offset-2">
-            Slider
+          <div class="col-xs-8 col-xs-offset-2 text-center">
+
+              <div class="ms_box">
+
+                <img src="img/rockerbox-logo.png" alt="Rockerbox Logo">
+                <p>"We have been able to make scaling the technical infrastructure of our business cost effective and efficient."</p>
+                <small>Rick O'Toole</small>
+                <small>Co-founder and CTO</small>
+                <a href="#">Read Story</a>
+
+              </div>
+
+              <div class="ms_slider_circle">
+                <a href="#"><i class="fas fa-circle"></i></a>
+                <a href="#"><i class="far fa-circle"></i></a>
+                <a href="#"><i class="far fa-circle"></i></a>
+              </div>
+
           </div>
 
         </div>
       </div>
     </section>
-    <!-- /stripe 6 -->
+    <!-- /fascia 6 -->
 
-    <!-- Inizio stripe 7 -->
+    <!-- Inizio fascia 7 -->
     <section id="stripe7">
       <div class="container debug_h100">
         <div class="row">
@@ -414,7 +430,7 @@
         </div>
       </div>
     </section>
-    <!-- /stripe 7 -->
+    <!-- /fascia 7 -->
 
   </main>
   <!-- /main -->
