--- a/index.html
+++ b/index.html
@@ -420,11 +420,12 @@
 
     <!-- Inizio fascia 7 -->
     <section id="stripe7">
-      <div class="container debug_h100">
+      <div class="container">
         <div class="row">
 
-          <div class="col-xs-12">
-            Get started now
+          <div class="col-xs-12 text-center">
+            <h2>Get started now.</h2>
+            <a href="#" class="btn btn-default">Create your account</a>
           </div>
 
         </div>
