--- a/index.html
+++ b/index.html
@@ -439,14 +439,79 @@
 
   <!-- Inizio footer -->
   <footer>
-    <div class="container debug_h100">
+    <div class="container">
       <div class="row">
-
-        <div class="col-xs-12 col-sm-12 col-md-4">1</div>
-        <div class="col-xs-12 col-sm-6 col-md-2">2</div>
-        <div class="col-xs-12 col-sm-6 col-md-2">3</div>
-        <div class="col-xs-12 col-sm-6 col-md-2">4</div>
-        <div class="col-xs-12 col-sm-6 col-md-2">5</div>
+        <!-- col 1 -->
+        <div class="col-xs-12 col-sm-12 col-md-4">
+          <img src="img/digitalocean-logo-mark.svg" alt="Logo Digital Ocean">
+          <small>&copy; DigitalOcean, LLC. All rights reserved.</small>
+          <small>Proudly made in NY</small>
+          <div class="social">
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+        <!-- col 2 -->
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul class="list-unstyled">
+            <li>Company</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Leadership</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Partner Network</a></li>
+            <li><a href="#">Referral Program</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Legal & Security</a></li>
+          </ul>
+        </div>
+        <!-- col 3 -->
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul class="list-unstyled">
+            <li>Products</li>
+            <li><a href="#">Droplets</a></li>
+            <li><a href="#">Spaces</a></li>
+            <li><a href="#">Kubernetes</a></li>
+            <li><a href="#">Load Balancers</a></li>
+            <li><a href="#">Block Storage</a></li>
+            <li><a href="#">Tools & Integrations</a></li>
+            <li><a href="#">One-Click Apps</a></li>
+            <li><a href="#">ΑΡΙ</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Release Notes</a></li>
+          </ul>
+        </div>
+        <!-- col 4 -->
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul class="list-unstyled ms_mtop">
+            <li>Community</li>
+            <li><a href="#">Tutorials</a></li>
+            <li><a href="#">Meetups</a></li>
+            <li><a href="#">Q&A</a></li>
+            <li><a href="#">Write for Donations</a></li>
+            <li><a href="#">Droplets for Demos</a></li>
+            <li><a href="#">Hatch</a></li>
+            <li><a href="#">Shop Swag</a></li>
+            <li><a href="#">Research Program</a></li>
+            <li><a href="#">Currents Research</a></li>
+            <li><a href="#">Open Source</a></li>
+          </ul>
+        </div>
+        <!-- col 5 -->
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul class="list-unstyled ms_mtop">
+            <li>Support</li>
+            <li><a href="#">Contact support</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Network Status</a></li>
+          </ul>
+        </div>
 
       </div>
     </div>
