--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
 <body>
 
+  <div class="ms_support">
+    <div class="ms_support_text hidden">
+      <a href="#"><p>Can I help answer any questions you have about DigitalOcean?</p></a>
+      <i class="fas fa-caret-right"></i>
+    </div>
+    <figure>
+      <a href="#"><img src="img/shark.png" alt="Support"></a>
+    </figure>
+  </div>
+
   <!-- Inizio header -->
   <header>
 
@@ -447,11 +457,11 @@
           <small>&copy; DigitalOcean, LLC. All rights reserved.</small>
           <small>Proudly made in NY</small>
           <div class="social">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
-            <i class="fab fa-linkedin"></i>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
         <!-- col 2 -->
@@ -517,6 +527,8 @@
     </div>
   </footer>
   <!-- /footer -->
+
+
 
 
 
